add title index